--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -92,6 +92,7 @@
                                 <button type="reset" class="btn" id="clearSearch" onclick="clearSearchInput()" style="background: #212529;">
                                     <i class="bi bi-x-lg clearSearchButtonHeader"></i>
                                 </button>
+                                <button class="btn btn-dark text-center  input-group-text " type="submit" style="width: 50px;"><i class="fa-solid fa-magnifying-glass text-light  "></i></button>
                             </div>
                                     <% } else { %>
                             <div class="input-group">
@@ -99,9 +100,10 @@
                               <button type="reset" class="btn" id="clearSearch" onclick="clearSearchInput()" style="background: #212529;">
                                   <i class="bi bi-x-lg clearSearchButtonHeader"></i>
                               </button>
+                              <button class="btn btn-dark text-center  input-group-text " type="submit" style="width: 50px; "><i class="fa-solid fa-magnifying-glass text-light  "></i></button>
                             </div>
                         <% } %>
-                        <button class="btn btn-dark text-center rounded" type="submit" style="width: 50px; margin-left: 5px;"><i class="fa-solid fa-magnifying-glass text-light  "></i></button>
+                       
                     </div>
                 </form>
                </div>
