--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -10,7 +10,7 @@
                 <div class="row">
                     <div class="col-xl-4 col-md-4 mb-30">
                         <div class="single-cta">
-                            <i class="fas fa-map-marker-alt"></i>
+                            <i class="bi bi-geo-alt"></i>
                             <div class="cta-text">
                                 <h4>Find us</h4>
                                 <span>1010 Avenue, sw 54321, Pathanamthitta</span>
@@ -19,7 +19,7 @@
                     </div>
                     <div class="col-xl-4 col-md-4 mb-30">
                         <div class="single-cta">
-                            <i class="fas fa-phone"></i>
+                            <i class="bi bi-telephone"></i>
                             <div class="cta-text">
                                 <h4>Call us</h4>
                                 <span>987654321**</span>
@@ -28,7 +28,7 @@
                     </div>
                     <div class="col-xl-4 col-md-4 mb-30">
                         <div class="single-cta">
-                            <i class="far fa-envelope-open"></i>
+                            <i class="bi bi-envelope"></i>
                             <div class="cta-text">
                                 <h4>Mail us</h4>
                                 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=rarekicks0@gmail.com" target="_blank" style="text-decoration: none; color: #757575;">rarekicks0@gmail.com</a>
