--- a/views/user/addAddress.ejs
+++ b/views/user/addAddress.ejs
@@ -28,7 +28,7 @@
                 </div>
                 <label for="validationCustom01" class="form-label addressId1">Name</label>
                 <div class="col-md-12 input-group ">
-                    <span class="input-group-text "><i class="fa-solid fa-signature"></i></span>
+                    <span class="input-group-text inputGroupInlineText "><i class="fa-solid fa-signature"></i></span>
                     <input type="text" class="form-control formInputField" id="validationCustom01" name="name" pattern="[A-Za-z\s]+" required>
                     <div class="valid-feedback">
                         Looks good!
@@ -36,7 +36,7 @@
                 </div>
                 <label for="validationCustom02" class="form-label">Contact</label>
                 <div class="col-md-12 input-group ">
-                    <span class="input-group-text "><i class="fa-solid fa-phone"></i></span>
+                    <span class="input-group-text inputGroupInlineText "><i class="fa-solid fa-phone"></i></span>
                     <input type="tel" class="form-control formInputField" id="validationCustom02" name="contact" pattern="[0-9]{10}"  required>
                     <div class="valid-feedback">
                         Looks good!
@@ -44,7 +44,7 @@
                 </div>
                 <label for="validationCustom02" class="form-label">Pin code</label>
                 <div class="col-md-12 input-group ">
-                    <span class="input-group-text "><i class="fa-solid fa-barcode"></i></i></span>
+                    <span class="input-group-text inputGroupInlineText "><i class="fa-solid fa-barcode"></i></i></span>
                     <input type="text" class="form-control formInputField" id="validationCustom02" name="pinCode" pattern="[0-9]{5,10}" title="Please enter a valid pin code (5-10 digits)" required>
                     <div class="valid-feedback">
                         Looks good!
@@ -53,7 +53,7 @@
                 <label for="validationCustomUsername" class="form-label">Address</label>
                 <div class="col-md-12 ">
                     <div class="input-group has-validation">
-                        <span class="input-group-text "><i class="fa-solid fa-map-location"></i></span>
+                        <span class="input-group-text inputGroupInlineText "><i class="fa-solid fa-map-location"></i></span>
                         <input type="text" class="form-control formInputField" id="validationCustomUsername" aria-describedby="inputGroupPrepend" name="address" required>
                         <div class="invalid-feedback">
                             Enter A Valid Address!
@@ -63,7 +63,7 @@
                 <label for="validationCustomUsername" class="form-label">Landmark</label>
                 <div class="col-md-12 ">
                     <div class="input-group has-validation">
-                        <span class="input-group-text "><i class="fa-solid fa-landmark-flag"></i></span>
+                        <span class="input-group-text inputGroupInlineText "><i class="fa-solid fa-landmark-flag"></i></span>
                         <input type="text" class="form-control formInputField" id="validationCustomUsername" aria-describedby="inputGroupPrepend" name="landmark" required>
                         <div class="invalid-feedback">
                             Enter A Valid Address!
@@ -73,7 +73,7 @@
                 <label for="validationCustomUsername" class="form-label">Town/City</label>
                 <div class="col-md-12 ">
                     <div class="input-group has-validation">
-                        <span class="input-group-text "><i class="fa-solid fa-city"></i></span>
+                        <span class="input-group-text inputGroupInlineText "><i class="fa-solid fa-city"></i></span>
                         <input type="text" class="form-control formInputField" id="validationCustomUsername" aria-describedby="inputGroupPrepend" name="city" required >
                         <div class="invalid-feedback">
                             Enter A Valid Address!
