--- a/views/user/changePassword.ejs
+++ b/views/user/changePassword.ejs
@@ -12,7 +12,7 @@
                 <div class="col-md-12">
                   <label for="validationPassword" class="form-label">Current Password</label>
                   <div class="input-group has-validation">
-                    <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-key"></i></span>
+                    <span class="input-group-text inputGroupInlineText" id="inputGroupPrepend"><i class="bi bi-key"></i></span>
                     <input type="password" class="form-control" id="validationPassword1" aria-describedby="inputGroupPrepend" name="currentPassword"  required>
                     <span class="btn rounded-pill" onclick="togglePassword1()" id="passKey1" style="font-size: 20px;"><i class="bi bi-eye-slash-fill"></i></span>
                     <span class="error-span">&nbsp;</span>
@@ -24,7 +24,7 @@
                 <div class="col-md-12">
                   <label for="validationPassword" class="form-label">New Password</label>
                   <div class="input-group has-validation">
-                    <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-key"></i></span>
+                    <span class="input-group-text inputGroupInlineText" id="inputGroupPrepend"><i class="bi bi-key"></i></span>
                     <input type="password" class="form-control" id="validationPassword2" aria-describedby="inputGroupPrepend" name="newPassword"  required>
                     <span class="btn rounded-pill" onclick="togglePassword2()" id="passKey2" style="font-size: 20px;"><i class="bi bi-eye-slash-fill"></i></span>
                     <span class="error-span">&nbsp;</span>
@@ -36,7 +36,7 @@
                 <div class="col-md-12">
                   <label for="validationPassword" class="form-label">Conform Password</label>
                   <div class="input-group has-validation">
-                    <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-key"></i></span>
+                    <span class="input-group-text inputGroupInlineText" id="inputGroupPrepend"><i class="bi bi-key"></i></span>
                     <input type="password" class="form-control" id="validationPassword3" aria-describedby="inputGroupPrepend" name="confirmPassword"  required>
                     <span class="btn rounded-pill" onclick="togglePassword3()" id="passKey3" style="font-size: 20px;"><i class="bi bi-eye-slash-fill"></i></span>
                     <span class="error-span">&nbsp;</span>
