--- a/views/layout/alert.ejs
+++ b/views/layout/alert.ejs
@@ -1,6 +1,7 @@
+<script src="../../public/jsFiles/alert.js"></script>
 <div class="alertKey">
-    <% if(locals.message) { %>
-      <div class="alert alert-danger alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
+    <% if(locals?.message) { %>
+      <!-- <div class="alert alert-danger alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
         data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
         <strong><%= message %></strong>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -14,13 +15,15 @@
             successAlert.style.display = 'none';
           }
         }, 2000); // Adjust the delay (in milliseconds) as needed
+      </script> -->
+      <script>
+        showAlert('<%=message%>')
       </script>
-      
     <% } %>      
   </div>
   <div class="alertKey">
-    <% if(locals.messageS) { %>
-      <div class="alert alert-success alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
+    <% if(locals?.messageS) { %>
+      <!-- <div class="alert alert-success alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
         data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
         <strong><%= messageS %></strong>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -33,6 +36,9 @@
             successAlert.style.display = 'none';
           }
         }, 2000);
+      </script> -->
+      <script>
+        showSuccess('<%=messageS%>')
       </script>
     <% } %>      
   </div>
