--- a/views/admin/dashBoard.ejs
+++ b/views/admin/dashBoard.ejs
@@ -11,7 +11,7 @@
 <body>
     <%- include('../layout/adminHeader')-%>
     <div class="container mt-5 mb-5">
-      <h3 class="text-center mb-2 d-block" style="  font-family: 'Michroma', sans-serif;">Total Sales & Stats</h3>
+      <h3 class="text-center mb-3 d-block" style="  font-family: 'Michroma', sans-serif;">Total Sales & Stats</h3>
       <div class="btn-group dropdown" style="font-family: 'Michroma', sans-serif; font-size: large; color: white !important;">
         <button type="button" style="font-size: large;" class="btn btn-dark rounded-pill dropdown-toggle px-3 py-2 ms-3" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fa-solid fa-chart-simple me-3" style="font-size: 20px;"></i>Browse
@@ -105,7 +105,7 @@
           });
       </script>
     </div>
-      <canvas id="myChart" style="width:100%; max-width:1000 px; max-height: 700px;"></canvas>
+      <canvas class="mt-3" id="myChart" style="width:100%; max-width:1000 px; max-height: 700px;"></canvas>
     </div>
     <div class="modal fade" id="datepickerModal" tabindex="-1" role="dialog" aria-labelledby="datepickerModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
