--- a/public/css/header.css
+++ b/public/css/header.css
@@ -18,9 +18,14 @@
     transition: 0.5s;
 }
 .profileIcon:hover{
-    color: rgb(0, 0, 0) !important;
-    transition: 0.5s;
+    color: rgb(69, 69, 69) !important;
+    text-shadow: 3px 3px 5px black;
+  }
+  .profileIcon{
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.64);
+  transition:all 0.1s ease-in-out;
 }
+
 h3 {
     overflow-wrap: break-word;
 }
@@ -131,7 +136,7 @@ h5 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #f8f9fa00; /* Add your desired background color */
+    background-color: #ffffff00; /* Add your desired background color */
     padding: 10px;
 }
 
@@ -461,4 +466,22 @@ h5 {
 }
 .clearSearchButtonHeader{
   font-size: larger;
+}
+
+::-webkit-scrollbar{
+  width: 8px;
+}
+::-webkit-scrollbar-track{
+  background: #ffffff;
+}
+::-webkit-scrollbar-thumb{
+  background: #000000;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.dropdownHead{
+  border-radius: 20px !important;
+  border: 5px solid rgb(110, 110, 110) !important;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.499);
 }
