--- a/views/admin/adminUserManagement.ejs
+++ b/views/admin/adminUserManagement.ejs
@@ -8,47 +8,27 @@
     <%- include('../layout/adminHeader')-%>
 
 <div class="container" style="margin-top: 20px; margin-bottom: 200px;"> 
-        <div class="container-fluid adminContainer">
-          <div class="d-flex justify-content-center text-center mt-2"> 
-            <form action="/admin/searchUser" class="needs-validation" method="get" class=" w-50 mt-2 mb-3" enctype="application/form-data">
-              <div class="input-group mt-3">
-                  <span class="input-group-text">
-                    <i class="bi bi-search" style="font-size: 20px;"></i>
-                  </span>
-                  <% if (search) { %>
-                  <input type="text" class="form-control w-50" name="search" value="<%= search%>" placeholder="Search User's">
-                <% } else { %>
-                  <input type="text" class="form-control w-50" name="search" placeholder="Search User's">
-                <% } %>
-                </div>
-                <div class="mb-4">
-                <button class="btn btn-dark text-center rounded-pill" type="submit" style="width: 100px; margin-top: 10px;">Search</button>
-                <a href="/admin/viewUsers" class="btn btn-danger  rounded-pill text-center" style="width: 100px; margin-top: 10px;">Reset</i></a></div>
-            </form>
-          </div>
-            <div class=" g-5 adminCenter" > 
-                <div>
-                  <button class="btn btn-dark rounded">Total Users  : <%=users.length%></button></div>
-                  <div class=""><a href="/admin/createUser" style="width: 100%; display: flex; align-items: center; justify-content: center; text-decoration: none;"><button class="btn btn-dark rounded  mt-2">Create User</button></a></div>
-                
-            </div>
-        </div>
-        <div class="container mt-2 p-4" style="  border-radius: 20px; padding: 20px; background-color: rgba(255, 255, 255, 0.635);">
+  <h3 class="text-center mt-3" style="font-family: 'Michroma', sans-serif;">User Management</h3>
+        <div class="container p-4" style="  border-radius: 20px; padding: 20px; background-color: rgba(255, 255, 255, 0.635);">
             <div class="row row-cols-1 row-cols-xl-3 row-cols-md-2 g-2 d-flex" style="justify-content: center;">
               <% if (users=='') { %>
                 <h2 class="text-center">No Users!</h2>
               <% } %>
               
               <% if (users) { %>
-                <div class="bg-dark p-3 w-100 table-responsive " style="border-radius: 20px;">
-            <h3 class="text-center text-light " style="font-family: 'Michroma', sans-serif;">Users ( <%=users.length%> )</h3>
+        <div class="bg-dark p-3 w-100 table-responsive " style="border-radius: 20px;">
+            <div class="mainFontFamily mb-2 p-2" style="width: 100%; display: flex; align-items: center; justify-content:space-between; ">
+              <span class="text-center text-light fs-3 " style="font-family: 'Michroma', sans-serif;">Users ( <%=users.length%> )</span>
+              <a href="/admin/createUser" style="text-decoration: none;">
+                <button class="btn btn-outline-warning mt-2">Create User</button>
+              </a>
+            </div>
                 <table class="table table-striped table-borderless table-dark " id="ordersTable">
                   <thead>
                     <tr>
                       <th scope="col">#</th>
                       <th scope="col">Name</th>
-                      <th scope="col">Email</th>
-                      <th scope="col">Contact</th>
+                      <th scope="col" id="hideTableRow">Email</th>
                       <th scope="col">Registered On</th>
                       <th scope="col">Actions</th>
                     </tr>
@@ -57,23 +37,22 @@
                     <% users.forEach(function(user, index) { %>
                       <tr>
                         <th scope="row"><%= index + 1 %></th>
-                        <td style="text-overflow: ellipsis !important;"><%= user.name %></td>
-                        <td style="text-overflow: ellipsis !important;"><%= user.email %></td>
-                        <td style="text-overflow: ellipsis !important;"><%= user.contact %></td>
+                        <td style="text-overflow: ellipsis !important;"><a href="/admin/detailedUser?id=<%=user._id%>" style="text-decoration: none !important; color: white;"><%= user.name %></a></td>
+                        <td style="text-overflow: ellipsis !important;" id="hideTableRow"><a href="/admin/detailedUser?id=<%=user._id%>" style="text-decoration: none !important; color: white;"><%= user.email %></a></td>
                         <td><%= moment(user.createdAt).fromNow() %></td>
                         <td>
-                          <a href="/admin/detailedUser?id=<%=user._id%>" class="btn me-1" style="text-decoration: none; color: rgb(0, 0, 0);">
-                            <i class="fa-regular fa-eye text-white "></i>
+                          <a href="/admin/detailedUser?id=<%=user._id%>" class="btn me-1 text-success" style="text-decoration: none; color: rgb(0, 0, 0);">
+                            <i class="fa-regular fa-user "></i>
                           </a>
-                          <a href="/admin/blockUser?id=<%= user._id %>" class="btn me-1" id="button" onclick="handleButtonClick()">
+                          <a href="/admin/editUser?id=<%= user._id %>" class="btn  me-1 text-danger ">
+                            <i class="fa-solid fa-pencil  "></i>
+                          </a>
+                          <a class="btn text-warning  rounded-circle  showHideButton" id="<%= user._id %>">
                             <% if (user.isBlocked) { %>
-                              <i class="fa-solid fa-user-large-slash text-white "></i>
+                              <i class="bi bi-eye-slash"></i>
                             <% } else { %>
-                              <i class="fa-solid fa-user-large text-white "></i>
+                              <i class="bi bi-eye"></i>
                             <% } %>
-                          </a>
-                          <a href="/admin/editUser?id=<%= user._id %>" class="btn">
-                            <i class="fa-solid fa-pencil text-white "></i>
                           </a>
                         </td>
                       </tr>
@@ -94,5 +73,6 @@
   });
 </script>
 <script src="../../public/jsFiles/searchVal.js"></script>
+<script src="../../public/jsFiles/admin.js"></script>
 <%- include('../layout/footer')-%>
 <%- include('../layout/footerHTML')-%>
