--- a/views/admin/editCoupon.ejs
+++ b/views/admin/editCoupon.ejs
@@ -5,7 +5,7 @@
 </head>
 <body>
 <%- include('../layout/adminHeader') %>
-<main class="container mt-5">
+<main class="container mt-5 mb-5">
 <section class="content-main">
 <div class="container" style="display: flex; justify-content: center;">
         <div class="card" style="width: max-content; display: flex; justify-content: center;">
