--- a/views/admin/productList.ejs
+++ b/views/admin/productList.ejs
@@ -8,13 +8,13 @@
     <div class="container" style="margin-top: 20px; margin-bottom: 50px;"> 
         <h2 class="text-start" style="font-family: 'Michroma', sans-serif;">Products</h2>
 <div class="container adminContainer">
-    <div class="d-flex justify-content-center mt-2">
-        <form action="/admin/searchProductList" method="get" class="w-50 mt-2 mb-3 needs-validation" enctype="application/form-data" style="box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.515); border-radius: 6px;">
+    <div class="d-flex justify-content-center mt-3 mb-1">
+        <form action="/admin/searchProductList" method="get" class="w-75  mt-2 needs-validation" enctype="application/form-data" style="box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.515); border-radius: 30px;">
             <div class="input-group">
-                <span class="input-group-text bg-secondary" style="border: none;"><a href="/admin/productList" class="btn"><i class="fa-solid fa-broom" disable></i></a></span>
-                <input type="text" class="form-control" name="search" placeholder="Search Product" value="<%= search ? search : '' %>">
-                <button class="btn btn-secondary px-4 text-dark" type="submit">
-                    <i class="fa-solid fa-magnifying-glass" style="font-weight: 700;"></i>
+                <span class="input-group-text leftSpan bg-dark" style="border: none;"><a href="/admin/productList" class="btn"><i class="fa-solid fa-broom text-light " disable></i></a></span>
+                <input type="text" class="form-control bg-dark  text-light " id="searchInputAdmin" name="search" placeholder="Search product's" value="<%= search ? search : '' %>">
+                <button class="btn btn-dark rightSpan px-4 text-dark" type="submit">
+                    <i class="fa-solid fa-magnifying-glass text-light " style="font-weight: 700;"></i>
                 </button>
             </div>
         </form>
@@ -24,7 +24,8 @@
                         <button class="btn btn-dark rounded">Total Quantity : <%= products.reduce((total, product) => total + product.quantity, 0) %></button>
                     </div>
                     <div>
-                        <button class="btn btn-dark rounded">Total Item : <%=products.length%></button>
+                        <button class="btn btn-dark rounded">Total Item : <%= locals?.total ? total : locals?.products ? products.length : 0 %>
+                        </button>
                     </div>
                     <div>
                         <a href="/admin/createCategory">
@@ -38,7 +39,7 @@
                     </div>
             </div>
 </div>
-      <div class="container mt-1 p-4" style="background-color: #e9ddf300 !important;  border: 1px solid rgba(166, 166, 166, 0); border-radius: 30px;  padding: 20px;">
+      <div class="container  p-4" style="background-color: #e9ddf300 !important;  border: 1px solid rgba(166, 166, 166, 0); border-radius: 30px;  padding: 20px;">
             <div class="row row-cols-1 row-cols-xl-3 row-cols-md-2 g-4  d-flex" style="justify-content: center;">
               <% if (products=='') { %>
                 <h2 class="text-center mainFontFamily">No Such Products</h2>
