corrected the link in the 500 page

--- a/views/user/errorPage.html
+++ b/views/user/errorPage.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="../../public/images/log-modified.png">
+    <title>Internal Server Error</title>
     <style>
         @import url("https://fonts.googleapis.com/css?family=Fira+Code&display=swap");
 
@@ -16,6 +17,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
   height: 100vh;
   background-color: #ecf0f1;
@@ -134,7 +136,7 @@ body {
 </head>
 <body>
     <div class="container">
-        <img src="../../public/images/error.png" style="height: 50vh; border-radius: 20px; border: 5px solid rgb(96, 96, 96);" />
+        <img src="../../public/images/error.png" style="max-height: 60vh; border-radius: 20px; border: 5px solid rgb(96, 96, 96);" />
   
         <h1>
           <span></span> <br />
@@ -143,7 +145,7 @@ body {
         <p>We are currently trying to fix the problem.</p>
         <p class="info">
           <b>Go Home.</b>
-          <a href="https://www.rarekicks.shop" target="_blank"
+          <a href="https://rarekicks.shop"
             >Rarekicks.shop</a
           >
           <div id="goBackButton">
