--- a/views/user/allProducts.ejs
+++ b/views/user/allProducts.ejs
@@ -10,8 +10,8 @@
 <div class="container productCont productContAll">
     <div class="container  filterDropdown">
         <ul class="p-4 filterDropdownUl">
-            <h3 class="text-center text-light mt-2 mb-3 mainFontFamily w-100" style="word-wrap: break-word;">
-                <%= locals.brand ? `${brand} (${products?.length} result${products?.length !== 1 ? 's' : ''})` : (name ? `${name} (${products?.length} result${products?.length !== 1 ? 's' : ''})` : 'All Products') %>
+            <h3 class="text-center text-light mt-2 mb-3 mainFontFamily w-100" style="word-wrap: break-word; overflow: hidden; white-space: wrap; ">
+                <%= locals.brand ? `${brand} (${products?.length} result${products?.length !== 1 ? "'s" : ''})` : (name ? `${name} (${products?.length} result${products?.length !== 1 ? "'s" : ''})` : 'All Products') %>
               </h3>
             <li class="dropdown">
                 <div class="btn-group dropdown">
