--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -52,7 +52,7 @@
                 <%}%>
                 <div class="container">
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" id="referralLink" value="http://localhost:3000/user/register?ref=<%=user.referralCode%>" readonly>
+                        <input type="text" class="form-control" id="referralLink" value="https://rarekicks.shop/user/register?ref=<%=user.referralCode%>" readonly>
                         <div class="input-group-append">
                             <button class="btn btn-outline-secondary" type="button" id="copyButton" onclick="copyReferralLink()"><i class="fa-regular fa-copy"></i></button>
                         </div>
