--- a/views/user/changePassword.ejs
+++ b/views/user/changePassword.ejs
@@ -14,7 +14,7 @@
                   <div class="input-group has-validation">
                     <span class="input-group-text inputGroupInlineText" id="inputGroupPrepend"><i class="bi bi-key"></i></span>
                     <input type="password" class="form-control" id="validationPassword1" aria-describedby="inputGroupPrepend" name="currentPassword"  required>
-                    <span class="btn rounded-pill" onclick="togglePassword1()" id="passKey1" style="font-size: 20px;"><i class="bi bi-eye-slash-fill"></i></span>
+                    <span class=" input-group-text  eyeButton" onclick="togglePassword1()" id="passKey1" style="font-size: 20px;"><i class="bi bi-eye-slash-fill"></i></span>
                     <span class="error-span">&nbsp;</span>
                     <div class="invalid-feedback">
                       Enter A Your Password !
@@ -26,7 +26,7 @@
                   <div class="input-group has-validation">
                     <span class="input-group-text inputGroupInlineText" id="inputGroupPrepend"><i class="bi bi-key"></i></span>
                     <input type="password" class="form-control" id="validationPassword2" aria-describedby="inputGroupPrepend" name="newPassword"  required>
-                    <span class="btn rounded-pill" onclick="togglePassword2()" id="passKey2" style="font-size: 20px;"><i class="bi bi-eye-slash-fill"></i></span>
+                    <span class=" input-group-text eyeButton" onclick="togglePassword2()" id="passKey2" style="font-size: 20px;"><i class="bi bi-eye-slash-fill"></i></span>
                     <span class="error-span">&nbsp;</span>
                     <div class="invalid-feedback">
                       Enter A Valid Password !
@@ -38,7 +38,7 @@
                   <div class="input-group has-validation">
                     <span class="input-group-text inputGroupInlineText" id="inputGroupPrepend"><i class="bi bi-key"></i></span>
                     <input type="password" class="form-control" id="validationPassword3" aria-describedby="inputGroupPrepend" name="confirmPassword"  required>
-                    <span class="btn rounded-pill" onclick="togglePassword3()" id="passKey3" style="font-size: 20px;"><i class="bi bi-eye-slash-fill"></i></span>
+                    <span class=" input-group-text eyeButton" onclick="togglePassword3()" id="passKey3" style="font-size: 20px;"><i class="bi bi-eye-slash-fill"></i></span>
                     <span class="error-span">&nbsp;</span>
                     <div class="invalid-feedback">
                       Enter A Valid Password !
@@ -47,7 +47,7 @@
                 </div>
                 <div class="save">
                     <div class="d-flex" style="justify-content: center;">
-                    <button class="btn btn-dark rounded-pill mt-2" id="startCountdownButton" type="submit">Save</button>
+                    <button class="btn btn-dark rounded-pill mt-2 px-5" id="startCountdownButton" type="submit">Save</button>
                     </div>
                 </div>
               </form>
