--- a/views/admin/adminEditUser.ejs
+++ b/views/admin/adminEditUser.ejs
@@ -26,7 +26,7 @@
           <label for="validationCustomUsername" class="form-label">Email</label>
           <div class="input-group has-validation">
             <span class="input-group-text" id="inputGroupPrepend">@</span>
-            <input type="email" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" name="email" value="<%=user.email%>" required>
+            <input type="email" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" name="email" value="<%=user.email%>" readonly>
             <div class="invalid-feedback">
               Enter A Valid Email !
             </div>
